--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Ola's Scrum Master Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,7 +42,7 @@
 							• collaborate with the Product Owner to maintain and manage the product backlog.
 						</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/1a4MVqnxdmkiWmlGEGuSBLQzsdpibp2Ry/view?usp=drive_link" class="button">More about my role...</a></li>
+							<li><a href="images/Scrum in brief.png" class="button">More about my role...</a></li>
 						</ul>
 					</section>
 
